--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Document</title>
 </head>
-<h1>test</h1>
+<body>
+    <nav>
+        <% if (user) { %>
+            <a href="/logout">LOG OUT</a>
+          <% } else { %>
+            <a href="/auth/google" class="login">LOG IN&nbsp;<img></a>
+            <% } %>
+    </nav>
+    
+</body>
 </html>
