--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<h1>TEST</h1>
-
-
-<body>
-    
-</body>
-</html>
+<%- include('../partials/header') %>
+<table id="list">
+<thead>
+    <tr>
+      <th>Title</th>
+      <th>Release<br>Year</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% games.forEach(function(m) { %>
+      <tr>
+        <td><%= m.title %></td>
+        <td><%= m.releaseYear %></td>
+        <td><a href="/games/<%= m._id %>">DETAILS</a></td>
+      </tr>
+      <% }); %>
+    </tbody>
+  </table>
