fixed adding reviews

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="/movies" id="header">ALL MOVIES</a>
+        <a href="/games" id="header">ALL GAMES</a>
         <% if (user) { %>
             <a href="/games/new" id="header">ADD GAME</a>
             <a href="/logout" id="header">LOG OUT</a>
