end of class tues

--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -5,6 +5,14 @@
     <input type="text" name="title">
     <label>Release Year:</label>
     <input type="text" name="releaseYear">
+    <label>System</label>
+    <select name="system">
+      <option value="Super Nintendo">Super Nintendo</option>
+      <option value="Genesis">Genesis</option>
+      <option value="Playstation">Playstation</option>
+      <option value="Saturn">Saturn</option>
+      <option value="Nintendo 64">Nintendo 64</option>
+    </select>
     <input type="submit" value="Add Game">
   </form>
 </body>
