getting that update to work

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -57,8 +57,7 @@
                     <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
                       <button type="submit">X</button>
                     </form>
-                    <form action="/reviews/<%= r._id %>?_method=PUT" method="POST">
-
+                    <form action="/reviews/<%= r._id %>/edit">
                         <button type="submit">UPDATE COMMENT</button>
                       </form>
                   <% } %>
