--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -2,5 +2,5 @@
 
 <form action="/review/<%= review._id %>?_method=PUT" method="POST">
     <input name="text" value="<%= review.text %>">
-    <button type="submit">UPDATE COMMENT</button>
+    <button type="submit">Update Comment</button>
   </form>
