--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,6 +1,15 @@
 <%- include('../partials/header') %>
 
-<form action="/review/<%= review._id %>?_method=PUT" method="POST">
-    <input name="text" value="<%= review.text %>">
-    <button type="submit">Update Comment</button>
+
+  <form action="/reviews/<%= review._id %>?_method=PUT" method="POST">
+    <label>Comment:</label>
+    <textarea name="content" value="<%= review.content %>"></textarea>
+    <label>Most Memorable:</label>
+    <select name="rating" value="<%= review.rating %>"  >
+      <option value="Graphics">Graphics</option>
+      <option value="Music">Music</option>
+      <option value="Gameplay">Gameplay</option>
+      <option value="Story">Story</option>
+    </select>
+    <input type="submit" value="Update">
   </form>
