--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -1,19 +1,18 @@
 <%- include('../partials/header') %>
 
-<form id="new-form" action="/games" method="POST">
-    <label>Title:</label>
-    <input type="text" name="title">
-    <label>Release Year:</label>
-    <input type="text" name="releaseYear">
-    <label>System</label>
-    <select name="system">
-      <option value="Super Nintendo">Super Nintendo</option>
-      <option value="Genesis">Genesis</option>
-      <option value="Playstation">Playstation</option>
-      <option value="Saturn">Saturn</option>
-      <option value="Nintendo 64">Nintendo 64</option>
-    </select>
-    <input type="submit" value="Add Game">
-  </form>
-</body>
-  </html>
+    <form id="new-form" action="/games" method="POST">
+        <label>Title:</label>
+        <input type="text" name="title">
+        <label>Release Year:</label>
+        <input type="text" name="releaseYear">
+        <label>System</label>
+        <select name="system">
+            <option value="Super Nintendo">Super Nintendo</option>
+            <option value="Genesis">Genesis</option>
+            <option value="Playstation">Playstation</option>
+            <option value="Saturn">Saturn</option>
+            <option value="Nintendo 64">Nintendo 64</option>
+        </select>
+        <input type="submit" value="Add Game">
+    </form>
+    <%- include('../partials/footer') %>
