--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,20 +1,24 @@
 <%- include('../partials/header') %>
-<table id="list">
-<thead>
-    <tr>
-      <th>Title</th>
-      <th>Release<br>Year</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% games.forEach(function(m) { %>
-      <tr>
-        <td><%= m.title %></td>
-        <td><%= m.releaseYear %></td>
-        <td><a href="/games/<%= m._id %>">DETAILS</a></td>
-      </tr>
-      <% }); %>
-    </tbody>
-  </table>
-  </html>
+    <table id="list">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Release<br>Year</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% games.forEach(function(m) { %>
+                <tr>
+                    <td>
+                        <%= m.title %>
+                    </td>
+                    <td>
+                        <%= m.releaseYear %>
+                    </td>
+                    <td><a href="/games/<%= m._id %>">DETAILS</a></td>
+                </tr>
+                <% }); %>
+        </tbody>
+    </table>
+    <%- include('../partials/footer') %>
