--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,82 +1,90 @@
 <%- include('../partials/header') %>
 
-<section id="show-page">
-    <div>Title: </div>
-    <div>
-        <%= game.title %>
-    </div>
-    <div>Release Year: </div>
-    <div>
-        <%= game.releaseYear %>
-    </div>
+    <section id="show-page">
+        <div>Title: </div>
+        <div>
+            <%= game.title %>
+        </div>
+        <div>Release Year: </div>
+        <div>
+            <%= game.releaseYear %>
+        </div>
         <div>System: </div>
-    <div>
-      <%= game.system %>
-    </div>
-</section>
+        <div>
+            <%= game.system %>
+        </div>
+    </section>
 
-<% if (user) { %>
-    <br><br>
-    <h2>Comments</h2>
-    <form id="add-review-form" method="POST" action="/games/<%= game._id %>/reviews">
-      <label>Comment:</label>
-      <textarea name="content"></textarea>
-      <label>Most Memorable:</label>
-      <select name="rating">
-        <option value="Graphics">Graphics</option>
-        <option value="Music">Music</option>
-        <option value="Gameplay">Gameplay</option>
-        <option value="Story">Story</option>
-      </select>
-      <input type="submit" value="Add">
-    </form>
-    <% } %>
+    <% if (user) { %>
+        <br><br>
+        <h2>Comments</h2>
+        <form id="add-review-form" method="POST" action="/games/<%= game._id %>/reviews">
+            <label>Comment:</label>
+            <textarea name="content"></textarea>
+            <label>Most Memorable:</label>
+            <select name="rating">
+                <option value="Graphics">Graphics</option>
+                <option value="Music">Music</option>
+                <option value="Gameplay">Gameplay</option>
+                <option value="Story">Story</option>
+            </select>
+            <input type="submit" value="Add">
+        </form>
+        <% } %>
 
 
-      <% if (game.reviews.length) { %>
-        <table>
-          <thead>
-            <tr>
-              <th>User</th>
-              <th>Date</th>
-              <th>Comment</th>
-              <th>Most Memorable</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% let total = 0 %>
-            <% game.reviews.forEach(function(r) { %>
-              <% total += r.rating %>
-              <tr>
-                <td class="review-user"><%= r.userName %></td>
-                <td><%= r.createdAt.toLocaleDateString() %></td>
-                <td><%= r.content %></td>
-                <td><%= r.rating %></td>
-                <td>
-                  
-                    <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
-                      <button type="submit">Delete Comment</button>
-                    </form>
-                    <form action="/reviews/<%= r._id %>/edit">
-                        <button type="submit">Update Comment</button>
-                      </form>
-               
-                </td>
-              </tr>
-         
-            <% }); %>
-            <tr>
-              <td colspan="3"></td>
-              <td><%= (total / game.reviews.length).toFixed(1) %></td>
-            </tr>
+            <% if (game.reviews.length) { %>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>User</th>
+                            <th>Date</th>
+                            <th>Comment</th>
+                            <th>Most Memorable</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% let total=0 %>
+                            <% game.reviews.forEach(function(r) { %>
+                                <% total +=r.rating %>
+                                    <tr>
+                                        <td class="review-user">
+                                            <%= r.userName %>
+                                        </td>
+                                        <td>
+                                            <%= r.createdAt.toLocaleDateString() %>
+                                        </td>
+                                        <td>
+                                            <%= r.content %>
+                                        </td>
+                                        <td>
+                                            <%= r.rating %>
+                                        </td>
+                                        <td>
 
-          </tbody>
-        </table>
-        
-        <% } else { %>
-          <h5>No Reviews Yet</h5>
-          <% } %>
+                                            <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
+                                                <button type="submit">Delete Comment</button>
+                                            </form>
+                                            <form action="/reviews/<%= r._id %>/edit">
+                                                <button type="submit">Update Comment</button>
+                                            </form>
 
-        </body>
+                                        </td>
+                                    </tr>
 
-          </html>
+                                    <% }); %>
+                                        <tr>
+                                            <td colspan="3"></td>
+                                            <td>
+                                                <%= (total / game.reviews.length).toFixed(1) %>
+                                            </td>
+                                        </tr>
+
+                    </tbody>
+                </table>
+
+                <% } else { %>
+                    <h5>No Reviews Yet</h5>
+                    <% } %>
+
+                        <%- include('../partials/footer') %>
