--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,18 +8,20 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <nav>
-        <h1 class="lead">FIGHT STUFF</h1>
-        <a href="/games">ALL GAMES</a>
+        <h1 class="text-decoration-underline">FIGHT STUFF</h1>
+        <a href="/games" id="header">ALL GAMES</a>
         <% if (user) { %>
-            <a href="/games/new">ADD GAME</a>
-            <a href="/logout">LOG OUT</a>
+            <a href="/games/new" id="header">ADD GAME</a>
+            <a href="/logout" id="header">LOG OUT</a>
             <% } else { %>
-                <a href="/auth/google" class="login">LOG IN&nbsp;<img></a>
+                <a href="/auth/google" class="login" id="header">LOG IN&nbsp;<img></a>
                 <% } %>
     </nav>
     <main>
