more fiddling with css

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 <body>
     
     <nav>
-        <h1 class="text-decoration-underline">FIGHT STUFF</h1>
+        <h1 class="text-decoration-underline">FIGHTING GAME STUFF</h1>
         <a href="/games" id="header">ALL GAMES</a>
         <% if (user) { %>
             <a href="/games/new" id="header">ADD GAME</a>
