--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,7 +47,7 @@ nav {
   grid-area: nav;
   background-color: black;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 0 20px 0 30px;
 }
