--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,3 +184,12 @@ font-size: x-large;
   justify-content: center;
   align-items: center;
 }
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
