--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
 
-  <form action="/reviews/<%= review._id %>?_method=PUT" method="POST">
+  <form action="/reviews/<%= review._id %>/edit?_method=PUT" method="POST">
     <label>Comment:</label>
     <textarea name="content" value="<%= review.content %>"></textarea>
     <label>Most Memorable:</label>
