--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -62,13 +62,15 @@
                                             <%= r.rating %>
                                         </td>
                                         <td>
-
+                                            
+<% if(user==r.userId){  %> 
                                             <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
                                                 <button type="submit">Delete Comment</button>
                                             </form>
                                             <form action="/reviews/<%= r._id %>/edit">
                                                 <button type="submit">Update Comment</button>
                                             </form>
+                                            <% }  %> 
 
                                         </td>
                                     </tr>
